lib/common-music/sa/include/sa.h

EXPORT ButtBP *_wrap_new_ButtBP_empty ();
EXPORT ButtBP *_wrap_new_ButtBP (float larg1, float larg2, SndObj *larg3, SndObj *larg4, SndObj *larg5, int larg6, float larg7);
EXPORT void _wrap_delete_ButtBP (ButtBP *larg1);
EXPORT int _wrap_ButtBP_Set (ButtBP *larg1, char *larg2, float larg3);
EXPORT void _wrap_ButtBP_SetFreq (ButtBP *larg1, float larg2);
EXPORT void _wrap_ButtBP_SetBW (ButtBP *larg1, float larg2);
EXPORT void _wrap_ButtBP_SetFreq_mod (ButtBP *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_ButtBP_SetBW_mod (ButtBP *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_ButtBP_SetSr (ButtBP *larg1, float larg2);
EXPORT int _wrap_ButtBP_Connect (ButtBP *larg1, char *larg2, void *larg3);
EXPORT ButtBR *_wrap_new_ButtBR_empty ();
EXPORT ButtBR *_wrap_new_ButtBR (float larg1, float larg2, SndObj *larg3, SndObj *larg4, SndObj *larg5, int larg6, float larg7);
EXPORT void _wrap_delete_ButtBR (ButtBR *larg1);
EXPORT ButtHP *_wrap_new_ButtHP_empty ();
EXPORT ButtHP *_wrap_new_ButtHP (float larg1, SndObj *larg2, SndObj *larg3, int larg4, float larg5);
EXPORT void _wrap_delete_ButtHP (ButtHP *larg1);
EXPORT ButtLP *_wrap_new_ButtLP_empty ();
EXPORT ButtLP *_wrap_new_ButtLP (float larg1, SndObj *larg2, SndObj *larg3, int larg4, float larg5);
EXPORT void _wrap_delete_ButtLP (ButtLP *larg1);
EXPORT Ap *_wrap_new_Ap_empty ();
EXPORT Ap *_wrap_new_Ap (float larg1, float larg2, SndObj *larg3, SndObj *larg4, SndObj *larg5, int larg6, float larg7);
EXPORT void _wrap_delete_Ap (Ap *larg1);
EXPORT void _wrap_Ap_SetFreq (Ap *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_Ap_SetR (Ap *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_Ap_SetSr (Ap *larg1, float larg2);
EXPORT int _wrap_Ap_Set (Ap *larg1, char *larg2, float larg3);
EXPORT int _wrap_Ap_Connect (Ap *larg1, char *larg2, void *larg3);
EXPORT char *_wrap_Ap_ErrorMessage (Ap *larg1);
EXPORT LoPass *_wrap_new_LoPass_empty ();
EXPORT LoPass *_wrap_new_LoPass (float larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_LoPass (LoPass *larg1);
EXPORT void _wrap_LoPass_SetFreq (LoPass *larg1, float larg2);
EXPORT void _wrap_LoPass_SetSr (LoPass *larg1, float larg2);
EXPORT int _wrap_LoPass_Set (LoPass *larg1, char *larg2, float larg3);
EXPORT HiPass *_wrap_new_HiPass_empty ();
EXPORT HiPass *_wrap_new_HiPass (float larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_HiPass (HiPass *larg1);
EXPORT void _wrap_HiPass_SetFreq (HiPass *larg1, float larg2);
EXPORT void _wrap_HiPass_SetSr (HiPass *larg1, float larg2);
EXPORT int _wrap_HiPass_Set (HiPass *larg1, char *larg2, float larg3);
EXPORT void _wrap_Hilb_real_set (Hilb *larg1, SndObj *larg2);
EXPORT SndObj *_wrap_Hilb_real_get (Hilb *larg1);
EXPORT void _wrap_Hilb_imag_set (Hilb *larg1, SndObj *larg2);
EXPORT SndObj *_wrap_Hilb_imag_get (Hilb *larg1);
EXPORT Hilb *_wrap_new_Hilb_empty ();
EXPORT Hilb *_wrap_new_Hilb (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Hilb (Hilb *larg1);
EXPORT char *_wrap_Hilb_ErrorMessage (Hilb *larg1);
EXPORT SyncGrain *_wrap_new_SyncGrain_empty ();
EXPORT SyncGrain *_wrap_new_SyncGrain (Table *larg1, Table *larg2, float larg3, float larg4, float larg5, float larg6, float larg7, SndObj *larg8, SndObj *larg9, SndObj *larg10, SndObj *larg11, int larg12, int larg13, float larg14);
EXPORT void _wrap_delete_SyncGrain (SyncGrain *larg1);
EXPORT void _wrap_SyncGrain_Offset (SyncGrain *larg1, int larg2);
EXPORT void _wrap_SyncGrain_Offset_seconds (SyncGrain *larg1, float larg2);
EXPORT void _wrap_SyncGrain_SetWaveTable (SyncGrain *larg1, Table *larg2);
EXPORT void _wrap_SyncGrain_SetEnvelopeTable (SyncGrain *larg1, Table *larg2);
EXPORT void _wrap_SyncGrain_SetFreq (SyncGrain *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_SyncGrain_SetAmp (SyncGrain *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_SyncGrain_SetPitch (SyncGrain *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_SyncGrain_SetGrainSize (SyncGrain *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_SyncGrain_SetPointerRate (SyncGrain *larg1, float larg2);
EXPORT int _wrap_SyncGrain_Set (SyncGrain *larg1, char *larg2, float larg3);
EXPORT int _wrap_SyncGrain_Connect (SyncGrain *larg1, char *larg2, void *larg3);
EXPORT char *_wrap_SyncGrain_ErrorMessage (SyncGrain *larg1);
EXPORT Mixer *_wrap_new_Mixer_empty ();
EXPORT Mixer *_wrap_new_Mixer (int larg1, SndObj **larg2, int larg3, float larg4);
EXPORT void _wrap_delete_Mixer (Mixer *larg1);
EXPORT int _wrap_Mixer_GetObjNo (Mixer *larg1);
EXPORT short _wrap_Mixer_AddObj (Mixer *larg1, SndObj *larg2);
EXPORT short _wrap_Mixer_DeleteObj (Mixer *larg1, SndObj *larg2);
EXPORT int _wrap_Mixer_Connect (Mixer *larg1, char *larg2, void *larg3);
EXPORT char *_wrap_Mixer_ErrorMessage (Mixer *larg1);
EXPORT void _wrap_Pan_left_set (Pan *larg1, SndObj *larg2);
EXPORT SndObj *_wrap_Pan_left_get (Pan *larg1);
EXPORT void _wrap_Pan_right_set (Pan *larg1, SndObj *larg2);
EXPORT SndObj *_wrap_Pan_right_get (Pan *larg1);
EXPORT Pan *_wrap_new_Pan_empty ();
EXPORT Pan *_wrap_new_Pan (float larg1, SndObj *larg2, SndObj *larg3, int larg4, int larg5, float larg6);
EXPORT void _wrap_delete_Pan (Pan *larg1);
EXPORT void _wrap_Pan_SetPan (Pan *larg1, float larg2, SndObj *larg3);
EXPORT int _wrap_Pan_Set (Pan *larg1, char *larg2, float larg3);
EXPORT int _wrap_Pan_Connect (Pan *larg1, char *larg2, void *larg3);
EXPORT char *_wrap_Pan_ErrorMessage (Pan *larg1);
EXPORT Gain *_wrap_new_Gain_empty ();
EXPORT Gain *_wrap_new_Gain (float larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_Gain (Gain *larg1);
EXPORT int _wrap_Gain_Set (Gain *larg1, char *larg2, float larg3);
EXPORT void _wrap_Gain_SetGain (Gain *larg1, float larg2);
EXPORT void _wrap_Gain_SetGainM (Gain *larg1, float larg2);
EXPORT float _wrap_Gain_dBToAmp (Gain *larg1, float larg2);
EXPORT Interp *_wrap_new_Interp_empty ();
EXPORT Interp *_wrap_new_Interp (float larg1, float larg2, float larg3, float larg4, int larg5, float larg6);
EXPORT void _wrap_delete_Interp (Interp *larg1);
EXPORT int _wrap_Interp_Set (Interp *larg1, char *larg2, float larg3);
EXPORT void _wrap_Interp_SetSr (Interp *larg1, float larg2);
EXPORT void _wrap_Interp_Restart (Interp *larg1);
EXPORT void _wrap_Interp_SetCurve (Interp *larg1, float larg2, float larg3, float larg4);
EXPORT void _wrap_Interp_SetDur (Interp *larg1, float larg2);
EXPORT Phase *_wrap_new_Phase_empty ();
EXPORT Phase *_wrap_new_Phase (float larg1, SndObj *larg2, float larg3, int larg4, float larg5);
EXPORT void _wrap_delete_Phase (Phase *larg1);
EXPORT void _wrap_Phase_SetFreq (Phase *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_Phase_SetPhase (Phase *larg1, float larg2);
EXPORT int _wrap_Phase_Set (Phase *larg1, char *larg2, float larg3);
EXPORT int _wrap_Phase_Connect (Phase *larg1, char *larg2, void *larg3);
EXPORT Ring *_wrap_new_Ring_empty ();
EXPORT Ring *_wrap_new_Ring (SndObj *larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_Ring (Ring *larg1);
EXPORT int _wrap_Ring_Connect (Ring *larg1, char *larg2, void *larg3);
EXPORT Unit *_wrap_new_Unit_empty ();
EXPORT Unit *_wrap_new_Unit (float larg1, short larg2, float larg3, int larg4, float larg5);
EXPORT void _wrap_delete_Unit (Unit *larg1);
EXPORT void _wrap_Unit_SetAmp (Unit *larg1, float larg2);
EXPORT void _wrap_Unit_SetStep (Unit *larg1, float larg2);
EXPORT void _wrap_Unit_SetMode (Unit *larg1, short larg2);
EXPORT int _wrap_Unit_Set (Unit *larg1, char *larg2, float larg3);
EXPORT Lookup *_wrap_new_Lookup_empty ();
EXPORT Synth *_wrap_new_Synth (int larg1, SndObj **larg2, long larg3, void (*larg4)(SndObj *), int larg5, float larg6);