lib/common-music/sa/cffi-sa.lisp


(defcfun ("_wrap_new_ButtBP_empty" new_ButtBP_empty) :sndobj_buttbp)

(defcfun ("_wrap_new_ButtBP" new_ButtBP) :sndobj_buttbp
  (fr :float)
  (bw :float)
  (inObj :sndobj)
  (inputfreq :sndobj)
  (inputbw :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_ButtBP" delete_ButtBP) :void
  (self :sndobj_buttbp))

(defcfun ("_wrap_ButtBP_Set" ButtBP_Set) :int
  (self :sndobj_buttbp)
  (mess :string)
  (value :float))

(defcfun ("_wrap_ButtBP_SetFreq" ButtBP_SetFreq) :void
  (self :sndobj_buttbp)
  (fr :float))

(defcfun ("_wrap_ButtBP_SetBW" ButtBP_SetBW) :void
  (self :sndobj_buttbp)
  (bw :float))

(defcfun ("_wrap_ButtBP_SetFreq_mod" ButtBP_SetFreq_mod) :void
  (self :sndobj_buttbp)
  (fr :float)
  (InFrObj :sndobj))

(defcfun ("_wrap_ButtBP_SetBW_mod" ButtBP_SetBW_mod) :void
  (self :sndobj_buttbp)
  (bw :float)
  (InBWObj :sndobj))

(defcfun ("_wrap_ButtBP_SetSr" ButtBP_SetSr) :void
  (self :sndobj_buttbp)
  (sr :float))

(defcfun ("_wrap_ButtBP_Connect" ButtBP_Connect) :int
  (self :sndobj_buttbp)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_new_ButtBR_empty" new_ButtBR_empty) :sndobj_buttbr)

(defcfun ("_wrap_new_ButtBR" new_ButtBR) :sndobj_buttbr
  (fr :float)
  (bw :float)
  (inObj :sndobj)
  (inputfreq :sndobj)
  (inputbw :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_ButtBR" delete_ButtBR) :void
  (self :sndobj_buttbr))

(defcfun ("_wrap_new_ButtHP_empty" new_ButtHP_empty) :sndobj_butthp)

(defcfun ("_wrap_new_ButtHP" new_ButtHP) :sndobj_butthp
  (fr :float)
  (inObj :sndobj)
  (inputfreq :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_ButtHP" delete_ButtHP) :void
  (self :sndobj_butthp))

(defcfun ("_wrap_new_ButtLP_empty" new_ButtLP_empty) :sndobj_buttlp)

(defcfun ("_wrap_new_ButtLP" new_ButtLP) :sndobj_buttlp
  (fr :float)
  (inObj :sndobj)
  (inputfreq :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_ButtLP" delete_ButtLP) :void
  (self :sndobj_buttlp))

(defcfun ("_wrap_new_Ap_empty" new_Ap_empty) :sndobj_ap)

(defcfun ("_wrap_new_Ap" new_Ap) :sndobj_ap
  (fr :float)
  (R :float)
  (inObj :sndobj)
  (inputfreq :sndobj)
  (inputR :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Ap" delete_Ap) :void
  (self :sndobj_ap))

(defcfun ("_wrap_Ap_SetFreq" Ap_SetFreq) :void
  (self :sndobj_ap)
  (fr :float)
  (InFrObj :sndobj))

(defcfun ("_wrap_Ap_SetR" Ap_SetR) :void
  (self :sndobj_ap)
  (r :float)
  (InRObj :sndobj))

(defcfun ("_wrap_Ap_SetSr" Ap_SetSr) :void
  (self :sndobj_ap)
  (sr :float))

(defcfun ("_wrap_Ap_Set" Ap_Set) :int
  (self :sndobj_ap)
  (mess :string)
  (value :float))

(defcfun ("_wrap_Ap_Connect" Ap_Connect) :int
  (self :sndobj_ap)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_Ap_ErrorMessage" Ap_ErrorMessage) :string
  (self :sndobj_ap))

(defcfun ("_wrap_new_LoPass_empty" new_LoPass_empty) :sndobj_lopass)

(defcfun ("_wrap_new_LoPass" new_LoPass) :sndobj_lopass
  (freq :float)
  (inObj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_LoPass" delete_LoPass) :void
  (self :sndobj_lopass))

(defcfun ("_wrap_LoPass_SetFreq" LoPass_SetFreq) :void
  (self :sndobj_lopass)
  (fr :float))

(defcfun ("_wrap_LoPass_SetSr" LoPass_SetSr) :void
  (self :sndobj_lopass)
  (sr :float))

(defcfun ("_wrap_LoPass_Set" LoPass_Set) :int
  (self :sndobj_lopass)
  (mess :string)
  (value :float))

(defcfun ("_wrap_new_HiPass_empty" new_HiPass_empty) :sndobj_hipass)

(defcfun ("_wrap_new_HiPass" new_HiPass) :sndobj_hipass
  (freq :float)
  (inObj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_HiPass" delete_HiPass) :void
  (self :sndobj_hipass))

(defcfun ("_wrap_HiPass_SetFreq" HiPass_SetFreq) :void
  (self :sndobj_hipass)
  (fr :float))

(defcfun ("_wrap_HiPass_SetSr" HiPass_SetSr) :void
  (self :sndobj_hipass)
  (sr :float))

(defcfun ("_wrap_HiPass_Set" HiPass_Set) :int
  (self :sndobj_hipass)
  (mess :string)
  (value :float))

(defcfun ("_wrap_Hilb_real_set" Hilb_real_set) :void
  (self :sndobj_hilb)
  (real :sndobj))

(defcfun ("_wrap_Hilb_real_get" Hilb_real_get) :sndobj
  (self :sndobj_hilb))

(defcfun ("_wrap_Hilb_imag_set" Hilb_imag_set) :void
  (self :sndobj_hilb)
  (imag :sndobj))

(defcfun ("_wrap_Hilb_imag_get" Hilb_imag_get) :sndobj
  (self :sndobj_hilb))

(defcfun ("_wrap_new_Hilb_empty" new_Hilb_empty) :sndobj_hilb)

(defcfun ("_wrap_new_Hilb" new_Hilb) :sndobj_hilb
  (input :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Hilb" delete_Hilb) :void
  (self :sndobj_hilb))

(defcfun ("_wrap_Hilb_ErrorMessage" Hilb_ErrorMessage) :string
  (self :sndobj_hilb))

(defcfun ("_wrap_new_SyncGrain_empty" new_SyncGrain_empty) :sndobj_syncgrain)

(defcfun ("_wrap_new_SyncGrain" new_SyncGrain) :sndobj_syncgrain
  (wavetable :sndobj_table)
  (envtable :sndobj_table)
  (fr :float)
  (amp :float)
  (pitch :float)
  (grsize :float)
  (prate :float)
  (inputfr :sndobj)
  (inputamp :sndobj)
  (inputpitch :sndobj)
  (inputgrsize :sndobj)
  (olaps :int)
  (vecisize :int)
  (sr :float))

(defcfun ("_wrap_delete_SyncGrain" delete_SyncGrain) :void
  (self :sndobj_syncgrain))

(defcfun ("_wrap_SyncGrain_Offset" SyncGrain_Offset) :void
  (self :sndobj_syncgrain)
  (pos :int))

(defcfun ("_wrap_SyncGrain_Offset_seconds" SyncGrain_Offset_seconds) :void
  (self :sndobj_syncgrain)
  (secs :float))

(defcfun ("_wrap_SyncGrain_SetWaveTable" SyncGrain_SetWaveTable) :void
  (self :sndobj_syncgrain)
  (wavetable :sndobj_table))

(defcfun ("_wrap_SyncGrain_SetEnvelopeTable" SyncGrain_SetEnvelopeTable) :void
  (self :sndobj_syncgrain)
  (envtable :sndobj_table))

(defcfun ("_wrap_SyncGrain_SetFreq" SyncGrain_SetFreq) :void
  (self :sndobj_syncgrain)
  (fr :float)
  (inputfr :sndobj))

(defcfun ("_wrap_SyncGrain_SetAmp" SyncGrain_SetAmp) :void
  (self :sndobj_syncgrain)
  (amp :float)
  (inputamp :sndobj))

(defcfun ("_wrap_SyncGrain_SetPitch" SyncGrain_SetPitch) :void
  (self :sndobj_syncgrain)
  (pitch :float)
  (inputpitch :sndobj))

(defcfun ("_wrap_SyncGrain_SetGrainSize" SyncGrain_SetGrainSize) :void
  (self :sndobj_syncgrain)
  (grsize :float)
  (inputgrsize :sndobj))

(defcfun ("_wrap_SyncGrain_SetPointerRate" SyncGrain_SetPointerRate) :void
  (self :sndobj_syncgrain)
  (prate :float))

(defcfun ("_wrap_SyncGrain_Set" SyncGrain_Set) :int
  (self :sndobj_syncgrain)
  (mess :string)
  (value :float))

(defcfun ("_wrap_SyncGrain_Connect" SyncGrain_Connect) :int
  (self :sndobj_syncgrain)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_SyncGrain_ErrorMessage" SyncGrain_ErrorMessage) :string
  (self :sndobj_syncgrain))


(defcstruct SndObjList
  (obj :sndobj)
  (next :pointer))

(defcfun ("_wrap_new_Mixer_empty" new_Mixer_empty) :sndobj_mixer)

(defcfun ("_wrap_new_Mixer" new_Mixer) :sndobj_mixer
  (ObjNo :int)
  (InObjs :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Mixer" delete_Mixer) :void
  (self :sndobj_mixer))

(defcfun ("_wrap_Mixer_GetObjNo" Mixer_GetObjNo) :int
  (self :sndobj_mixer))

(defcfun ("_wrap_Mixer_AddObj" Mixer_AddObj) :short
  (self :sndobj_mixer)
  (InObj :sndobj))

(defcfun ("_wrap_Mixer_DeleteObj" Mixer_DeleteObj) :short
  (self :sndobj_mixer)
  (InObj :sndobj))

(defcfun ("_wrap_Mixer_Connect" Mixer_Connect) :int
  (self :sndobj_mixer)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_Mixer_ErrorMessage" Mixer_ErrorMessage) :string
  (self :sndobj_mixer))

(defcfun ("_wrap_Pan_left_set" Pan_left_set) :void
  (self :sndobj_pan)
  (left :sndobj))

(defcfun ("_wrap_Pan_left_get" Pan_left_get) :sndobj
  (self :sndobj_pan))

(defcfun ("_wrap_Pan_right_set" Pan_right_set) :void
  (self :sndobj_pan)
  (right :sndobj))

(defcfun ("_wrap_Pan_right_get" Pan_right_get) :sndobj
  (self :sndobj_pan))

(defcfun ("_wrap_new_Pan_empty" new_Pan_empty) :sndobj_pan)

(defcfun ("_wrap_new_Pan" new_Pan) :sndobj_pan
  (pan :float)
  (InObj :sndobj)
  (InPan :sndobj)
  (res :int)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Pan" delete_Pan) :void
  (self :sndobj_pan))

(defcfun ("_wrap_Pan_SetPan" Pan_SetPan) :void
  (self :sndobj_pan)
  (pan :float)
  (InPan :sndobj))

(defcfun ("_wrap_Pan_Set" Pan_Set) :int
  (self :sndobj_pan)
  (mess :string)
  (value :float))

(defcfun ("_wrap_Pan_Connect" Pan_Connect) :int
  (self :sndobj_pan)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_Pan_ErrorMessage" Pan_ErrorMessage) :string
  (self :sndobj_pan))

(defcfun ("_wrap_new_Gain_empty" new_Gain_empty) :sndobj_gain)

(defcfun ("_wrap_new_Gain" new_Gain) :sndobj_gain
  (gain :float)
  (InObj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Gain" delete_Gain) :void
  (self :sndobj_gain))

(defcfun ("_wrap_Gain_Set" Gain_Set) :int
  (self :sndobj_gain)
  (mess :string)
  (value :float))

(defcfun ("_wrap_Gain_SetGain" Gain_SetGain) :void
  (self :sndobj_gain)
  (gain :float))

(defcfun ("_wrap_Gain_SetGainM" Gain_SetGainM) :void
  (self :sndobj_gain)
  (gain_multiplier :float))

(defcfun ("_wrap_Gain_dBToAmp" Gain_dBToAmp) :float
  (self :sndobj_gain)
  (amp :float))

(defcfun ("_wrap_new_Interp_empty" new_Interp_empty) :sndobj_interp)

(defcfun ("_wrap_new_Interp" new_Interp) :sndobj_interp
  (initial :float)
  (final :float)
  (dur :float)
  (type :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Interp" delete_Interp) :void
  (self :sndobj_interp))

(defcfun ("_wrap_Interp_Set" Interp_Set) :int
  (self :sndobj_interp)
  (mess :string)
  (value :float))

(defcfun ("_wrap_Interp_SetSr" Interp_SetSr) :void
  (self :sndobj_interp)
  (sr :float))

(defcfun ("_wrap_Interp_Restart" Interp_Restart) :void
  (self :sndobj_interp))

(defcfun ("_wrap_Interp_SetCurve" Interp_SetCurve) :void
  (self :sndobj_interp)
  (initial :float)
  (final :float)
  (m_typec :float))

(defcfun ("_wrap_Interp_SetDur" Interp_SetDur) :void
  (self :sndobj_interp)
  (dur :float))

(defcfun ("_wrap_new_Phase_empty" new_Phase_empty) :sndobj_phase)

(defcfun ("_wrap_new_Phase" new_Phase) :sndobj_phase
  (freq :float)
  (FreqInput :sndobj)
  (offset :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Phase" delete_Phase) :void
  (self :sndobj_phase))

(defcfun ("_wrap_Phase_SetFreq" Phase_SetFreq) :void
  (self :sndobj_phase)
  (freq :float)
  (FreqInput :sndobj))

(defcfun ("_wrap_Phase_SetPhase" Phase_SetPhase) :void
  (self :sndobj_phase)
  (offset :float))

(defcfun ("_wrap_Phase_Set" Phase_Set) :int
  (self :sndobj_phase)
  (mess :string)
  (value :float))

(defcfun ("_wrap_Phase_Connect" Phase_Connect) :int
  (self :sndobj_phase)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_new_Ring_empty" new_Ring_empty) :sndobj_ring)

(defcfun ("_wrap_new_Ring" new_Ring) :sndobj_ring
  (InObj1 :sndobj)
  (InObj2 :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Ring" delete_Ring) :void
  (self :sndobj_ring))

(defcfun ("_wrap_Ring_SetInput1" Ring_SetInput1) :void
  (self :sndobj_ring)
  (InObj :sndobj))

(defcfun ("_wrap_Ring_SetInput2" Ring_SetInput2) :void
  (self :sndobj_ring)
  (InObj :sndobj))

(defcfun ("_wrap_Ring_Connect" Ring_Connect) :int
  (self :sndobj_ring)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_new_Unit_empty" new_Unit_empty) :sndobj_unit)

(defcfun ("_wrap_new_Unit" new_Unit) :sndobj_unit
  (m_amp :float)
  (mode :short)
  (step :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Unit" delete_Unit) :void
  (self :sndobj_unit))

(defcfun ("_wrap_Unit_SetAmp" Unit_SetAmp) :void
  (self :sndobj_unit)
  (amp :float))

(defcfun ("_wrap_Unit_SetStep" Unit_SetStep) :void
  (self :sndobj_unit)
  (step :float))

(defcfun ("_wrap_Unit_SetMode" Unit_SetMode) :void
  (self :sndobj_unit)
  (mode :short))

(defcfun ("_wrap_Unit_Set" Unit_Set) :int
  (self :sndobj_unit)
  (mess :string)
  (value :float))

(defcfun ("_wrap_new_Lookup_empty" new_Lookup_empty) :sndobj_lookup)
